test_src/compiler_errors/types/binary/XorFloatError3.b
class XorFloatError3 {
    void test() {
        Int value = 42;
        println(value ^= 14.0);
    }
}
